--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
 							[dirMovementVar]: directionMoving,
 							[tagInteractionVar]: tagID,
 							[statusVar]: blueToothStatus,
-							[speedVar]: speed
+							[speedVar]: speed.toFixed(2)
 			            }).then(() => {
 			                //console.log("Variables written to the database successfully!");
 			            }).catch((error) => {
