--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -570,6 +570,9 @@ window.fetchStops = async function(latitude, longitude) {
   
 let sentencesSource = 'sentences.json';
 let cachedSentences;
+let hachi_checkpoint_dist;
+let avatar_checkpoint_dis;
+  
 window.makeComments = async function(character) {
     return new Promise(async (resolve, reject) => {
         if (character !== "Hachi" && character !== "Avatar") {
@@ -1003,7 +1006,9 @@ $avatar_passage
 &lt;&lt;script&gt;&gt;
 writeToAvatar(&#39;avatar_passage&#39;,avatar_passage);
 &lt;&lt;/script&gt;&gt;
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="12" name="sentences" tags="" position="1100,400" size="100,100">&lt;&lt;script&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="12" name="sentences" tags="" position="1100,400" size="100,100">&lt;&lt;set variables().avatar_checkpoint_dis to $avatar_checkpoint_dist&gt;&gt;
+&lt;&lt;set variables().hachi_checkpoint_dis to $hachi_checkpoint_dist&gt;&gt;
+&lt;&lt;script&gt;&gt;
 const character = &quot;Avatar&quot;; // Change to &quot;Hachi&quot; or &quot;Avatar&quot;
 makeComments(character)
     .then(distanceSegments =&gt; {
