--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1006,8 +1006,8 @@ $avatar_passage
 &lt;&lt;script&gt;&gt;
 writeToAvatar(&#39;avatar_passage&#39;,avatar_passage);
 &lt;&lt;/script&gt;&gt;
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="12" name="sentences" tags="" position="1100,400" size="100,100">&lt;&lt;set variables().avatar_checkpoint_dis to $avatar_checkpoint_dist&gt;&gt;
-&lt;&lt;set variables().hachi_checkpoint_dis to $hachi_checkpoint_dist&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="12" name="sentences" tags="" position="1100,400" size="100,100">&lt;&lt;set variables().avatar_checkpoint_dist to $avatar_checkpoint_dist&gt;&gt;
+&lt;&lt;set variables().hachi_checkpoint_dist to $hachi_checkpoint_dist&gt;&gt;
 &lt;&lt;script&gt;&gt;
 const character = &quot;Avatar&quot;; // Change to &quot;Hachi&quot; or &quot;Avatar&quot;
 makeComments(character)
