--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -572,8 +572,11 @@ let sentencesSource = 'sentences.json';
 let cachedSentences;
   
 window.makeComments = async function(character) {
-        // Fetch JSON data
-    const jsonData = await fetchJSONFile('sentences.json', cachedSentences);
+    console.log('makeComments function called with character:', character);
+
+    // Fetch JSON data
+    const jsonData = await fetchJSONFile(sentencesSource, cachedSentences);
+    console.log('JSON data fetched:', jsonData);
 
     // Extract data based on the character parameter
     let observes, approaching, soundscape;
@@ -589,38 +592,40 @@ window.makeComments = async function(character) {
         console.error('Invalid character parameter');
         return;
     }
+    console.log('Data extracted for character:', character, 'Observes:', observes, 'Approaching:', approaching, 'Soundscape:', soundscape);
 
-    // Initialize used sentences array for the character
+    // Initialize used sentence names array for the character
     let characterSentenceHistory = [];
+    console.log('Initialized characterSentenceHistory:', characterSentenceHistory);
 
-    // Function to get a random sentence from an array and ensure it's not repeated often
-    const getRandomSentence = (array, usedSentences) => {
-        let sentence;
+    // Function to get a random sentence name from an array and ensure it's not repeated often
+    const getRandomSentenceName = (array, usedSentences) => {
+        let sentenceName;
         do {
-            sentence = array[Math.floor(Math.random() * array.length)];
-        } while (usedSentences.includes(sentence));
-        usedSentences.push(sentence);
-        return sentence;
+            sentenceName = array[Math.floor(Math.random() * array.length)];
+        } while (usedSentences.includes(sentenceName));
+        usedSentences.push(sentenceName);
+        console.log('Random sentence chosen:', sentenceName);
+        console.log('Updated characterSentenceHistory:', characterSentenceHistory);
+        return sentenceName;
     };
 
     // Process the distance segments
     const distanceSegments = Math.ceil(character === 'Avatar' ? avatar_checkpoint_dist / 15 : hachi_checkpoint_dist / 15);
+    console.log('Distance segments to process:', distanceSegments);
     const lastSegmentIndex = distanceSegments - 1;
     for (let i = 0; i < distanceSegments; i++) {
+        console.log('Processing distance segment:', i + 1);
         // Check if it's the last segment
         if (i === lastSegmentIndex) {
-            console.log(getRandomSentence(approaching, characterSentenceHistory));
+            console.log('Last segment reached, choosing sentence from approaching.');
+            console.log(getRandomSentenceName(approaching, characterSentenceHistory));
         } else {
-            console.log(getRandomSentence(soundscape, characterSentenceHistory));
+            // Randomly choose between soundscape and observes
+            const chosenArray = Math.random() < 0.5 ? Object.keys(soundscape) : Object.keys(observes);
+            console.log('Choosing sentence from randomly selected array:', chosenArray);
+            console.log(getRandomSentenceName(chosenArray, characterSentenceHistory));
         }
-    }
-
-    // Reset used sentences array for the next call
-    characterSentenceHistory = [];
-
-    // Output observes sentences
-    for (let i = 1; i <= 40; i++) {
-        console.log(observes[`observation${i}`]);
     }
 }
 
