--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -570,16 +570,13 @@ window.fetchStops = async function(latitude, longitude) {
   
 let sentencesSource = 'sentences.json';
 let cachedSentences;
-  
-let sentencesSource = 'sentences.json';
-let cachedSentences;
 let characterSentenceHistory = [];
 
 window.makeComments = async function(character) {
     console.log(`Character: ${character}`);
 
     // Fetch JSON data
-    const jsonData = await fetchJSONFile('sentences.json', cachedSentences);
+    const jsonData = await fetchJSONFile(sentencesSource, cachedSentences);
     console.log('JSON Data:', jsonData);
 
     // Extract data based on the character parameter
@@ -633,9 +630,8 @@ window.makeComments = async function(character) {
             console.log(getRandomSentenceValue(randomArray, characterSentenceHistory));
         }
     }
-}
+};
 
-  
   
   //Last line of the function. KEEP
 })
