--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1025,6 +1025,7 @@ writeToAvatar(&#39;avatar_passage&#39;,avatar_passage);
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="12" name="sentences" tags="" position="1100,400" size="100,100">&lt;&lt;set variables().avatar_checkpoint_dist to $avatar_checkpoint_dist&gt;&gt;
 &lt;&lt;set variables().hachi_checkpoint_dist to $hachi_checkpoint_dist&gt;&gt;
 
+&lt;&lt;repeat 2s&gt;&gt;
 &lt;&lt;script&gt;&gt;
 makeComments(&#39;Avatar&#39;).then(() =&gt; {
     console.log(&#39;Comments generated successfully.&#39;);
@@ -1032,6 +1033,7 @@ makeComments(&#39;Avatar&#39;).then(() =&gt; {
     console.error(&#39;Error generating comments:&#39;, error);
 });
 &lt;&lt;/script&gt;&gt;
+&lt;&lt;/repeat&gt;&gt;
 
 </tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
