--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -580,7 +580,7 @@ window.makeComments = async function(character) {
 
     // Fetch JSON data
     const jsonData = await fetchJSONFile(sentencesSource, cachedSentences);
-    console.log('JSON Data:', jsonData);
+    //console.log('JSON Data:', jsonData);
 
     // Extract data based on the character parameter
     let observes, approaching, soundscape;
@@ -595,9 +595,9 @@ window.makeComments = async function(character) {
     approaching = jsonData.approaching;
     soundscape = jsonData.soundscape;
 
-    console.log('Observes:', observes);
-    console.log('Approaching:', approaching);
-    console.log('Soundscape:', soundscape);
+    //console.log('Observes:', observes);
+    //console.log('Approaching:', approaching);
+    //console.log('Soundscape:', soundscape);
 
     // Function to generate random sentences upfront and store them in an array
     const generateRandomSentences = (obj, count) => {
@@ -1035,7 +1035,6 @@ writeToAvatar(&#39;avatar_passage&#39;,avatar_passage);
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="12" name="sentences" tags="" position="1100,400" size="100,100">&lt;&lt;set variables().avatar_checkpoint_dist to $avatar_checkpoint_dist&gt;&gt;
 &lt;&lt;set variables().hachi_checkpoint_dist to $hachi_checkpoint_dist&gt;&gt;
 
-&lt;&lt;repeat 2s&gt;&gt;
 &lt;&lt;script&gt;&gt;
 makeComments(&#39;Avatar&#39;).then(() =&gt; {
     console.log(&#39;Comments generated successfully.&#39;);
@@ -1043,7 +1042,6 @@ makeComments(&#39;Avatar&#39;).then(() =&gt; {
     console.error(&#39;Error generating comments:&#39;, error);
 });
 &lt;&lt;/script&gt;&gt;
-&lt;&lt;/repeat&gt;&gt;
 
 </tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
