--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -574,13 +574,11 @@ let characterSentenceHistory = [];
 let initialCheckpoint;
 let randomSentences = []; // Array to store pre-generated random sentences
 let totalSegments;
+let storyComment;
 
 window.makeComments = async function(character) {
-    //console.log(`Character: ${character}`);
-
     // Fetch JSON data
     const jsonData = await fetchJSONFile(sentencesSource, cachedSentences);
-    //console.log('JSON Data:', jsonData);
 
     // Extract data based on the character parameter
     let observes, approaching, soundscape;
@@ -590,14 +588,10 @@ window.makeComments = async function(character) {
         observes = jsonData.hachi_observes;
     } else {
         console.error('Invalid character parameter');
-        return;
+        return null; // Return null if character parameter is invalid
     }
     approaching = jsonData.approaching;
     soundscape = jsonData.soundscape;
-
-    //console.log('Observes:', observes);
-    //console.log('Approaching:', approaching);
-    //console.log('Soundscape:', soundscape);
 
     // Function to generate random sentences upfront and store them in an array
     const generateRandomSentences = (obj, count) => {
@@ -637,25 +631,18 @@ window.makeComments = async function(character) {
         // Determine the current segment based on the progress
         let currentSegment = Math.ceil(progress / 15);
 
-        console.log('Current Segment:', currentSegment);
-
-        // Display the text for the current segment only
-        console.log('Current Segment Text:');
+        // Return the text for the current segment only
         if (currentSegment >= totalSegments) {
-            console.log('Arrived at the next checkpoint');
             // Reset the initial checkpoint for the next segment
             initialCheckpoint = currentDistance;
+            return 'Arrived at the next checkpoint';
         } else if (currentSegment === 1) {
-            console.log(approaching[Math.floor(Math.random() * approaching.length)]);
-            approaching[Math.floor(Math.random() * approaching.length)];
-
+            return approaching[Math.floor(Math.random() * approaching.length)];
         } else {
-            //console.log(randomSentences[currentSegment - 2]); // Subtract 2 because the first segment is 1-based
-          	randomSentences[currentSegment - 2]; // Subtract 2 because the first segment is 1-based
+            return randomSentences[currentSegment - 2]; // Subtract 2 because the first segment is 1-based
         }
     }, 1000); // Check for updates every second
 };
-
 
   //Last line of the function. KEEP
 })
@@ -1037,12 +1024,13 @@ writeToAvatar(&#39;avatar_passage&#39;,avatar_passage);
 &lt;&lt;/script&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="12" name="sentences" tags="" position="1100,400" size="100,100">&lt;&lt;set variables().avatar_checkpoint_dist to $avatar_checkpoint_dist&gt;&gt;
 &lt;&lt;set variables().hachi_checkpoint_dist to $hachi_checkpoint_dist&gt;&gt;
+&lt;&lt;set $storyComment to &#39;&#39;&gt;&gt;
 
 &lt;&lt;script&gt;&gt;
-makeComments(&#39;Avatar&#39;).then(() =&gt; {
-    console.log(&#39;Comments generated successfully.&#39;);
-}).catch((error) =&gt; {
-    console.error(&#39;Error generating comments:&#39;, error);
+makeComments(&#39;Avatar&#39;).then(segmentText =&gt; {
+    console.log(segmentText); // Output the segment text
+}).catch(error =&gt; {
+    console.error(&#39;Error:&#39;, error); // Handle any errors
 });
 &lt;&lt;/script&gt;&gt;
 
