--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1026,6 +1026,7 @@ writeToAvatar(&#39;avatar_passage&#39;,avatar_passage);
 &lt;&lt;set variables().hachi_checkpoint_dist to $hachi_checkpoint_dist&gt;&gt;
 &lt;&lt;set $storyComment to &#39;&#39;&gt;&gt;
 
+&lt;&lt;repeat 2s&gt;&gt;
 &lt;&lt;script&gt;&gt;
 makeComments(&#39;Avatar&#39;).then(segmentText =&gt; {
     console.log(segmentText); // Output the segment text
@@ -1033,6 +1034,7 @@ makeComments(&#39;Avatar&#39;).then(segmentText =&gt; {
     console.error(&#39;Error:&#39;, error); // Handle any errors
 });
 &lt;&lt;/script&gt;&gt;
+&lt;&lt;/repeat&gt;&gt;
 
 </tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
