--- a/dashboard/searching_dash.html
+++ b/dashboard/searching_dash.html
@@ -570,64 +570,80 @@ window.fetchStops = async function(latitude, longitude) {
   
 let sentencesSource = 'sentences.json';
 let cachedSentences;
-  
+let characterSentenceHistory = [];
+let initialCheckpoint;
+let randomSentences = []; // Array to store pre-generated random sentences
+let totalSegments;
+let storyComment;
+
 window.makeComments = async function(character) {
-    console.log('makeComments function called with character :', character);
+    return new Promise((resolve, reject) => {
+        // Fetch JSON data
+        const jsonData = await fetchJSONFile(sentencesSource, cachedSentences);
 
-    // Fetch JSON data
-    const jsonData = await fetchJSONFile(sentencesSource, cachedSentences);
-    console.log('JSON data fetched:', jsonData);
-
-    // Extract data based on the character parameter
-    let observes, approaching, soundscape;
-    if (character === 'Avatar') {
-        observes = jsonData.avatar_observes;
-        approaching = jsonData.approaching;
-        soundscape = jsonData.soundscape;
-    } else if (character === 'Hachi') {
-        observes = jsonData.hachi_observes;
-        approaching = jsonData.approaching;
-        soundscape = jsonData.soundscape;
-    } else {
-        console.error('Invalid character parameter');
-        return;
-    }
-    console.log('Data extracted for character:', character, 'Observes:', observes, 'Approaching:', approaching, 'Soundscape:', soundscape);
-
-    // Initialize used sentence names array for the character
-    let characterSentenceHistory = [];
-    console.log('Initialized characterSentenceHistory:', characterSentenceHistory);
-
-    // Function to get a random sentence name from an array and ensure it's not repeated often
-    const getRandomSentenceName = (array, usedSentences) => {
-        let sentenceName;
-        do {
-            sentenceName = array[Math.floor(Math.random() * array.length)];
-        } while (usedSentences.includes(sentenceName));
-        usedSentences.push(sentenceName);
-        console.log('Random sentence chosen:', sentenceName);
-        console.log('Updated characterSentenceHistory:', characterSentenceHistory);
-        return sentenceName;
-    };
-
-    // Process the distance segments
-    const distanceSegments = Math.ceil(character === 'Avatar' ? avatar_checkpoint_dist / 15 : hachi_checkpoint_dist / 15);
-    console.log('Distance segments to process:', distanceSegments);
-    const lastSegmentIndex = distanceSegments - 1;
-    for (let i = 0; i < distanceSegments; i++) {
-        console.log('Processing distance segment:', i + 1);
-        // Check if it's the last segment
-        if (i === lastSegmentIndex) {
-            console.log('Last segment reached, choosing sentence from approaching.');
-            console.log(getRandomSentenceName(approaching, characterSentenceHistory));
+        // Extract data based on the character parameter
+        let observes, approaching, soundscape;
+        if (character === 'Avatar') {
+            observes = jsonData.avatar_observes;
+        } else if (character === 'Hachi') {
+            observes = jsonData.hachi_observes;
         } else {
-            // Randomly choose between soundscape and observes
-            const chosenArray = Math.random() < 0.5 ? Object.keys(soundscape) : Object.keys(observes);
-            console.log('Choosing sentence from randomly selected array:', chosenArray);
-            console.log(getRandomSentenceName(chosenArray, characterSentenceHistory));
+            reject('Invalid character parameter');
+            return;
         }
-    }
-}
+        approaching = jsonData.approaching;
+        soundscape = jsonData.soundscape;
+
+        // Function to generate random sentences upfront and store them in an array
+        const generateRandomSentences = (obj, count) => {
+            let sentences = [];
+            let keys = Object.keys(obj);
+            while (sentences.length < count) {
+                let key = keys[Math.floor(Math.random() * keys.length)];
+                let sentence = obj[key];
+                if (!sentences.includes(sentence)) {
+                    sentences.push(sentence);
+                }
+            }
+            return sentences;
+        };
+
+        // Generate random sentences for observes and soundscape
+        if (randomSentences.length === 0) {
+            randomSentences = randomSentences.concat(generateRandomSentences(observes, 20));
+            randomSentences = randomSentences.concat(generateRandomSentences(soundscape, 20));
+            // Shuffle the array to ensure randomness
+            randomSentences = randomSentences.sort(() => Math.random() - 0.5);
+        }
+
+        // Set up a timer to periodically check for updates in checkpoint distances
+        setInterval(() => {
+            // Take a snapshot of the initial checkpoint distance if it's not already defined
+            if (!initialCheckpoint) {
+                initialCheckpoint = character === 'Avatar' ? avatar_checkpoint_dist : hachi_checkpoint_dist;
+                // Calculate the total number of segments based on the initial checkpoint distance
+                totalSegments = Math.ceil(initialCheckpoint / 15);
+            }
+
+            // Determine the current distance and progress made
+            let currentDistance = character === 'Avatar' ? avatar_checkpoint_dist : hachi_checkpoint_dist;
+            let progress = initialCheckpoint - currentDistance;
+
+            // Determine the current segment based on the progress
+            let currentSegment = Math.ceil(progress / 15);
+
+            // Display the text for the current segment only
+            if (currentSegment >= totalSegments) {
+                // Reset the initial checkpoint for the next segment
+                initialCheckpoint = currentDistance;
+            } else if (currentSegment === 1) {
+                resolve(approaching[Math.floor(Math.random() * approaching.length)]);
+            } else {
+                resolve(randomSentences[currentSegment - 2]); // Subtract 2 because the first segment is 1-based
+            }
+        }, 1000); // Check for updates every second
+    });
+};
 
   //Last line of the function. KEEP
 })
@@ -1009,14 +1025,21 @@ writeToAvatar(&#39;avatar_passage&#39;,avatar_passage);
 &lt;&lt;/script&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="12" name="sentences" tags="" position="1100,400" size="100,100">&lt;&lt;set variables().avatar_checkpoint_dist to $avatar_checkpoint_dist&gt;&gt;
 &lt;&lt;set variables().hachi_checkpoint_dist to $hachi_checkpoint_dist&gt;&gt;
-&lt;&lt;script&gt;&gt;
-makeComments(&#39;Avatar&#39;).then(() =&gt; {
-    console.log(&#39;Comments generated successfully.&#39;);
-}).catch((error) =&gt; {
-    console.error(&#39;Error generating comments:&#39;, error);
-});
+&lt;&lt;set $storyComment to &#39;&#39;&gt;&gt;
 
+&lt;&lt;repeat 2s&gt;&gt;
+&lt;&lt;script&gt;&gt;
+makeComments(&#39;Avatar&#39;).then((segmentText) =&gt; {
+    // Store the returned segment text in a variable
+    let segmentTextAvatar = segmentText;
+    console.log(segmentTextAvatar);
+    // Now you can use segmentTextAvatar as needed
+}).catch((error) =&gt; {
+    console.error(&#39;Error:&#39;, error);
+});
 &lt;&lt;/script&gt;&gt;
+&lt;&lt;/repeat&gt;&gt;
+
 </tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
