--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -576,9 +576,9 @@ let randomSentences = []; // Array to store pre-generated random sentences
 let totalSegments;
 let storyComment;
 
-window.makeComments = async function(character) {
-    // Fetch JSON data
-    const jsonData = await fetchJSONFile(sentencesSource, cachedSentences);
+window.makeComments = function(character) {
+    // Fetch JSON data synchronously
+    const jsonData = fetchJSONFileSync(sentencesSource, cachedSentences);
 
     // Extract data based on the character parameter
     let observes, approaching, soundscape;
@@ -588,7 +588,7 @@ window.makeComments = async function(character) {
         observes = jsonData.hachi_observes;
     } else {
         console.error('Invalid character parameter');
-        return;
+        return null;
     }
     approaching = jsonData.approaching;
     soundscape = jsonData.soundscape;
@@ -636,12 +636,13 @@ window.makeComments = async function(character) {
             // Reset the initial checkpoint for the next segment
             initialCheckpoint = currentDistance;
         } else if (currentSegment === 1) {
-            console.log(approaching[Math.floor(Math.random() * approaching.length)]);
+            return approaching[Math.floor(Math.random() * approaching.length)];
         } else {
-            console.log(randomSentences[currentSegment - 2]); // Subtract 2 because the first segment is 1-based
+            return randomSentences[currentSegment - 2]; // Subtract 2 because the first segment is 1-based
         }
     }, 1000); // Check for updates every second
 };
+
 
   //Last line of the function. KEEP
 })
@@ -1026,15 +1027,12 @@ writeToAvatar(&#39;avatar_passage&#39;,avatar_passage);
 &lt;&lt;set $storyComment to &#39;&#39;&gt;&gt;
 
 &lt;&lt;script&gt;&gt;
-makeComments(&#39;Avatar&#39;).then((segmentText) =&gt; {
-    // Store the returned segment text in a variable
-    let segmentTextAvatar = segmentText;
-    console.log(segmentTextAvatar);
-    // Now you can use segmentTextAvatar as needed
-}).catch((error) =&gt; {
-    console.error(&#39;Error:&#39;, error);
-});
+// Call the makeComments function and store the result in a variable
+const segmentText = makeComments(&#39;Avatar&#39;);
+// Now you can use the segmentText variable as needed
+console.log(segmentText); // Output the segment text to the console
 &lt;&lt;/script&gt;&gt;
+
 
 </tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
